src/test/ui/no_crate_type.stderr
error: attribute must be of the form `#[crate_type = "..."]`
  --> $DIR/no_crate_type.rs:2:1
   |
LL | #![crate_type]  //~ ERROR attribute must be of the form `#[crate_type = "..."]`
   | ^^^^^^^^^^^^^^

error: aborting due to previous error

